# AdmiralSquidstatWrapper

./: .gitignore  README.md  setup.cfg  setup.py
example/: example.py  example1.py  example2.py
src/: admiral.py
