[metadata]
name = AdmiralSquidstatWrapper
author = Nis Fisker-Bødker
version = file: src/_version.txt
description = Admiral Squidstat Library Wrapper allows for easy Python integration of the Admiral Instruments Squidstat potentiostats.
[options]
python_requires = ==3.10
package_dir=
    =src
packages=find:
include_package_data = true
install_requires =
    numpy==1.26.2
    pandas==2.1
    SquidstatPyLibrary @ file:///SquidstatPyLibrary-1.8.0.5-py3-none-win_amd64.whl

[options.extras_require]
dev =
    pre-commit
    black
    flake8

[options.packages.find]
where=src